<resources>
    <string name="app_name">AuditoriaRetail</string>
    <string name="inicia_sesion">Bienvenido, Ingresa con tu cuenta</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="forgotpass">Olvidaste la contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="sign_up">Registrarme</string>
    <string name="yelsan">YELSAN</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="save">Guardar Datos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>